# RII-HUB

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
sample_inputs/: author_export.csv  faculty_roster.csv  master_list.csv  orcid_lookup.csv
sites/ASEE_CODE/: README.md  main.py  requirements.txt
sites/ASEE_CODE/src/: ingestor.py  institution_matcher.py  scopus_ops.py  utils.py
sites/scopus/author-search/: basic_export.py
sites/scopus/author-search/basic-export/: basic_export.py  orcid_id.py  utils.py
sites/scopus/author-search/single-author-tools/: single_author_search.py  utils.py
