[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "your-project"
version = "0.1.0"
description = "Quick setup for running the code"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "python-dateutil>=2.8.2",
  "python-dotenv>=1.0",
  "elsapy>=0.5.1"
]

[tool.hatch.metadata]
allow-direct-references = true
